--- a/uhtml/index.html
+++ b/uhtml/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>xSketchbook: Computational Publishing</title>
+    <title>Prototyping Computational Publishing for Culture</title>
     <link type="text/css" rel="stylesheet" href="css/book.css" />
     <style>
       a.fn {
@@ -88,16 +88,18 @@
         text-align: center;
       }
     </style>
-    <link type="text/css" rel="stylesheet" href="css/report003-nfdi4c.css" />
+    <link type="text/css" rel="stylesheet" href="css/report002-nfdi4c-v10.css" />
   </head>
   <body class="user-contents">
     <div class="titlepage frontmatter">
-      <h1 class="booktitle">xSketchbook: Computational Publishing</h1>
-      <h2 class="booksubtitle">An Open Research Notebook </h2>
+      <h1 class="booktitle">Prototyping Computational Publishing for Culture</h1>
+      <h2 class="booksubtitle">An NFDI4Culture and COPIM collaboration</h2>
+      <h3 class="bookauthor">by Simon Worthington</h3>
       <h4 class="bookversion">v0.3</h4>
     </div>
     <div class="copyrightpage frontmatter">
-      <p>Last updated: 2022-11-22</p>
+      <p>Published by: https://write.handbuch.io/books/computational-publishing/</p>
+      <p>Last updated: 2023-02-22</p>
       <p>Created: 2022-10-11</p>
       <p>Language: English (United Kingdom)</p>
       <p>Created by: Simon Worthington</p>
